[package]

name = "tmc-fsrs"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"


[dependencies]

dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-web = { version = "0.5.1", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.5.2" }

axum = { version = "0.7.5", optional = true }
axum_session = { version = "0.14.0", optional = true }
axum_session_auth = { version = "0.14.0", optional = true }
axum_session_sqlx = { version = "0.1.0", features = [ "postgres", "tls-rustls" ], optional = true }

tokio = { version = "1.37.0", features = ["full"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["auth"], optional = true }
http = { version = "1.0.0", optional = true }

async-trait = { version = "0.1.71", optional = true }
sqlx = { version = "0.7.4", features = [
    "macros",
    "migrate",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }

execute = "0.2.12"
anyhow = "1.0.71"

serde = { version = "1.0.200", features = ["derive"] }

log = { version = "0.4.21", optional = true }
simple_logger = { version = "5.0.0", optional = true }

dotenvy = { version = "0.15.7", optional = true }
console_log = { version = "1.0.0", optional = true }
thiserror = { version = "1.0.61", optional = true }
fastrand = { version="2.1.0", optional = true }
md5 = { version="0.7.0", optional = true }

[features]

default = []
server = [ 
    "axum", "tokio", "axum_session", "axum_session_auth", "axum_session_sqlx",
    "dioxus/axum", "dioxus-fullstack/axum",
    "http", "tower", "tower-http",
    "async-trait",  "sqlx",  
    "log", "simple_logger", "console_log",
    "dotenvy",
    "thiserror",
    "fastrand", "md5"
]
web = [
    "dioxus/web",
    "log", "console_log",
    "thiserror"
]
