[package]
name = "tmc-svc"
description = "TM Community - The server side"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/app/server.rs"

[dependencies]
axum = { version="0.7.4", features = [ "macros", "json" ] }
axum-extra = "0.9.2"
chrono = { version="0.4.34", features = [ "serde" ] }
clap = { version = "4.5.0", features = ["derive"] }
config = { version="0.14.0", default-features = false, features = ["yaml"] }
log = "0.4.20"
nanoid = "0.4.0"
secrecy = { version = "0.8.0", features = [ "serde" ] }
serde = { version="1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version="1.36.0", features = [ "full" ] }
tower = "0.4.13"
tower-http = { version="0.5.1", features = [ "full" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = [ "serde", "v4" ] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "chrono",               # Have a Postgres data type be convertible to `DateTime<Utc>`.
    "macros",               # Have access to `sqlx::query!` and `sqlx::query_as!` macros.
    "migrate",              # Ability to programmatically manage database migrations.
    "postgres",             # Use PostgreSQL specific features (such as non-standard SQL type).
    "runtime-tokio-rustls", # Use Tokio runtime for its futures and rustls as TLS backend.
    "uuid"                  # Add support for mapping SQL UUID to Uuid type from `uuid` create.
]
